<resources>
    <string name="app_name">LoginScreenDesign_layouts_You</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="use_phone_number">USE PHONE NUMBER</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="continue_with_google">Continue with Google</string>
</resources>