<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#0583EA"
        android:drawablePadding="30dp"
        android:textColor="@color/white"
        android:gravity="center|start"
        android:text="@string/login"
        android:textSize="30sp"
        app:drawableStartCompat="@drawable/ic_vector"
        tools:ignore="RtlSymmetry"
        android:paddingLeft="30dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="40dp"
        android:drawablePadding="10dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableBottomCompat="@drawable/borders" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:drawablePadding="10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableBottomCompat="@drawable/borders" />

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/use_phone_number"
        android:textColor="#0583EA"
        android:layout_marginLeft="130dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#858992"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#858992"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:padding="12dp"
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:background="#3B5998"
        android:drawableLeft="@drawable/ic_vector_facbook_shaded_1__"
        android:gravity="center"
        android:text="@string/continue_with_facebook"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:text="@string/continue_with_google"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_google_multi" />

</LinearLayout>